--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@next/font": "^13.1.1",
+    "@use-gesture/react": "^10.2.23",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "color.js": "^1.2.0",
     "framer-motion": "^8.2.4",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-window": "^1.8.8",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/react-window": "^1.8.5",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "cypress": "^12.3.0",
